<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.salesman.activity.personal.AboutUsActivity">

    <include layout="@layout/common_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_150"
        android:src="@drawable/app_logo_about_us" />

    <TextView
        style="@style/Text_666_32"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_versionname"
        style="@style/Text_aaa_32"
        android:layout_marginTop="@dimen/margin_14"
        tools:text="版本V1.6.0" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_0dp"
        android:layout_weight="1" />

    <TextView
        style="@style/Text_aaa_24"
        android:text="@string/company_copyrighe" />

    <TextView
        style="@style/Text_aaa_24"
        android:layout_marginBottom="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/company_name" />
</LinearLayout>
