<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/no_content_bg"
    android:orientation="vertical"
    tools:context="com.salesman.activity.personal.ChangePasswordActivity">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_20">

        <EditText
            android:id="@+id/et_old_pw"
            style="@style/BaseEditText"
            android:layout_height="@dimen/margin_90"
            android:hint="@string/input_old_password"
            android:inputType="textPassword" />

        <ImageView style="@style/SplitLine_ImageView" />

        <EditText
            android:id="@+id/et_new_pw"
            style="@style/BaseEditText"
            android:layout_height="@dimen/margin_90"
            android:hint="@string/input_new_password"
            android:inputType="textPassword" />

        <ImageView style="@style/SplitLine_ImageView" />

        <EditText
            android:id="@+id/et_new_pw_again"
            style="@style/BaseEditText"
            android:layout_height="@dimen/margin_90"
            android:hint="@string/input_new_password_again"
            android:inputType="textPassword" />
    </LinearLayout>

    <include layout="@layout/view_button" />
</LinearLayout>
